--- a/smartcar/band1/MDK-ARM/band1.uvprojx
+++ b/smartcar/band1/MDK-ARM/band1.uvprojx
@@ -585,6 +585,16 @@
               <FileType>5</FileType>
               <FilePath>..\Peripheral\motor.h</FilePath>
             </File>
+            <File>
+              <FileName>encoder.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Peripheral\encoder.c</FilePath>
+            </File>
+            <File>
+              <FileName>encoder.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Peripheral\encoder.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
