串口调试的程序也写好了，下一步是动手把速度控制的pid调出来

--- a/smartcar/band1/MDK-ARM/band1.uvprojx
+++ b/smartcar/band1/MDK-ARM/band1.uvprojx
@@ -763,6 +763,16 @@
               <FileType>5</FileType>
               <FilePath>..\Peripheral\encoder.h</FilePath>
             </File>
+            <File>
+              <FileName>redirect.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Peripheral\redirect.c</FilePath>
+            </File>
+            <File>
+              <FileName>redirect.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Peripheral\redirect.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
