--- a/smartcar/band1/MDK-ARM/.vscode/settings.json
+++ b/smartcar/band1/MDK-ARM/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "pid.h": "c",
-        "dma.h": "c"
+        "dma.h": "c",
+        "motor.h": "c"
     }
 }
