避障的代码也写得差不多了，接下来就是为循迹和避障函数选择合适的速度值了，顺便再说一句为了保证系统正常工作，调试用到的变量要记住

--- a/smartcar/band1/MDK-ARM/.vscode/settings.json
+++ b/smartcar/band1/MDK-ARM/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "pid.h": "c",
         "dma.h": "c",
-        "motor.h": "c"
+        "motor.h": "c",
+        "range.h": "c"
     }
 }
