--- a/smartcar/band1/MDK-ARM/band1.uvprojx
+++ b/smartcar/band1/MDK-ARM/band1.uvprojx
@@ -773,6 +773,16 @@
               <FileType>5</FileType>
               <FilePath>..\Peripheral\redirect.h</FilePath>
             </File>
+            <File>
+              <FileName>sg90.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Peripheral\sg90.c</FilePath>
+            </File>
+            <File>
+              <FileName>sg90.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\Peripheral\sg90.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
